Terminamos de completar y corregir (creo) | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
@@ -1,12 +1,8 @@
-En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua. Nosotros solo nos enfocaremos en los medios guiados porque son los que más cubre la materia.
+En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el emisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua.
 Las características y calidad de la transmisión están determinadas tanto por el tipo de señal como por las características del medio. Generalmente, en el diseño de sistemas de transmisión es deseable que tanto la distancia como la velocidad de transmisión sean lo más grande posible. Hay una serie de factores relacionados con el medio de transmisión y con la señal que determinan tanto la distancia como la velocidad de transmisión, tales como el ancho de banda, las dificultades en la transmisión, la interferencia y el número de receptores.
-
 ## Medios Guiados
-
 En los medios de transmisión guiados, la capacidad de transmisión, en términos de velocidad de transmisión o ancho de banda, depende drásticamente de la distancia y de sí el medio es punto a punto o multipunto. Los tres medios guiados que más se utilizan en la transmisión de datos son el par trenzado, el cable coaxial y la fibra óptica.
-
 ### Par Trenzado
-
 Consiste en dos cables de cobre aislados y entrecruzados en forma de espiral, formando un enlace de comunicación. Varios pares suelen encapsularse juntos en una envoltura protectora. El trenzado reduce las interferencias electromagnéticas (diafonía) entre pares adyacentes al utilizar diferentes pasos de torsión.
 
 >[!note] Pasos de Torsión
@@ -24,17 +20,12 @@ Hay dos variantes de pares trenzados, los apantallados y los sin apantallar. Los
 >
 >De entre los anteriores, los tipos 3 y 5 son los más utilizados en los entornos LAN. Los cables de tipo 3 son los más utilizados para realizar el cableado en la mayoría de los edificios, estos permiten una velocidad de transmisión de hasta 16 Mbps. El tipo 5 es un cable de mejores características para la transmisión de datos, este tipo de cables permite alcanzar una velocidad de transmisión de hasta 100 Mbps.
 >La principal diferencia entre ambos cables radica en los pasos de torsión o de trenzado de los cables.
-
 ### Cable Coaxial
-
 El cable coaxial, al igual que el par trenzado, tiene dos conductores, pero está construido de forma diferente para que pueda operar sobre un rango de frecuencias mayor. Consiste en un conductor cilíndrico externo que rodea a un cable conductor interior. El conductor interior se mantiene a lo largo del eje axial mediante una serie de anillos aislantes regularmente espaciados, o bien mediante un material sólido dieléctrico.
-El cable coaxial se usa para transmitir tanto señales analógicas como digitales, el cable coaxial maneja mayores frecuencias y velocidades de transmisión. Además, debido al apantallamiento, por construcción, el cable coaxial es mucho menos susceptible que el par trenzado tanto a interferencias como a diafonía, aunque sufre mucho ante atenuaciones, ruido térmico y ruido de intermodulación.
+El cable coaxial se usa para transmitir tanto señales analógicas como digitales, manejando mayores frecuencias y velocidades de transmisión que el par trenzado. Además, debido al apantallamiento, por construcción, el cable coaxial es mucho menos susceptible que el par trenzado tanto a interferencias como a diafonía, aunque sufre mucho ante atenuaciones, ruido térmico y ruido de intermodulación.
 En la transmisión de señales analógicas a larga distancia se necesitan amplificadores cada pocos kilómetros, siendo esta separación entre amplificadores menor cuanto mayor sea la frecuencia de trabajo de cable.
-
 ### Fibra Óptica
-
 Un cable de fibra óptica permite la propagación de luz a través de tres componentes principales: el **núcleo**, el **revestimiento** y la **cubierta**. La luz entra por el núcleo, donde se refleja y propaga dependiendo del ángulo de incidencia y las propiedades ópticas del revestimiento que lo rodea. Este proceso de reflexión interna total mantiene la luz confinada dentro del núcleo, permitiendo la transmisión de datos a altas velocidades y largas distancias. Existen tres modos de propagación en las fibras ópticas:
-
 1. **Multimodo de índice discreto**: La luz se propaga a través de múltiples trayectorias con diferentes ángulos de reflexión, lo que puede causar dispersión temporal de los pulsos de luz y limitar la velocidad de transmisión. Este modo es adecuado para distancias cortas.
 2. **Monomodo**: Al reducir el diámetro del núcleo, solo se permite una única trayectoria de luz, eliminando la dispersión multimodal y mejorando significativamente el rendimiento en términos de velocidad y distancia de transmisión. Este modo se utiliza comúnmente en aplicaciones de larga distancia como telefonía y televisión por cable.
 3. **Multimodo de índice gradual**: Variando gradualmente el índice de refracción del núcleo, los rayos de luz siguen trayectorias helicoidales que equilibran la velocidad y la distancia recorrida, permitiendo que todos los rayos lleguen simultáneamente al receptor. Este modo es frecuentemente utilizado en redes de área local.
@@ -42,87 +33,64 @@ Un cable de fibra óptica permite la propagación de luz a través de tres compo
 ![[modo-propagacion.png]]
 
 Las fuentes de luz empleadas en sistemas de fibra óptica son principalmente diodos LED y diodos láser (ILD). Los LEDs son más económicos, operan en un rango más amplio de temperaturas y tienen una vida útil más larga, pero ofrecen velocidades de transmisión más bajas. Los ILDs, aunque más costosos, proporcionan mayor eficiencia y permiten velocidades de transmisión superiores.
-La longitud de onda de la luz utilizada influye en el tipo de transmisión y en la velocidad alcanzable. Las fibras ópticas operan en **cuatro ventanas de transmisión** en el espectro infrarrojo, cada una ofreciendo diferentes anchos de banda y características de atenuación. Las longitudes de onda más largas presentan menores pérdidas y permiten velocidades más altas y mayores distancias de transmisión.
+La longitud de onda de la luz utilizada influye en el tipo de transmisión y en la velocidad alcanzable. Las fibras ópticas operan en **cuatro ventanas de transmisión** en el espectro infrarrojo, cada una ofreciendo anchos de banda y características de atenuación diferentes. Las longitudes de onda más largas presentan menores pérdidas y permiten velocidades más altas y mayores distancias de transmisión.
 
 >[!tldr] Atenuación de las Señales en la Fibra Óptica
 >La atenuación de la señal en las fibras ópticas se debe principalmente a la ***absorción*** y la ***dispersión***. La absorción implica la pérdida de energía de la luz debido al material de la fibra, mientras que la dispersión ocurre cuando la luz cambia de dirección al interactuar con pequeñas impurezas o irregularidades en el medio. La elección adecuada de materiales y longitudes de onda ayuda a minimizar estos efectos y optimizar el rendimiento de la transmisión.
-
 ## Medios no Guiados
-
 En el estudio de las comunicaciones inalámbricas se consideran tres intervalos de frecuencias:
-
 1. **Microondas (1 GHz a 40 GHz)**: Adecuadas para enlaces punto a punto y comunicaciones satelitales debido a sus señales son altamente direccionales.
 2. **Ondas de radio (30 MHz a 1 GHz)**: Idóneas para aplicaciones omnidireccionales.
-3. **Infrarrojo (3 × 10¹¹ Hz a 2 × 10¹⁴ Hz)**: Utilizado para conexiones locales punto a punto y aplicaciones multipunto en áreas confinadas, como en una habitación.
+3. **Infrarrojo (300 GHz a 200 THz)**: Utilizado para conexiones locales punto a punto y aplicaciones multipunto en áreas confinadas, como en una habitación.
 
 En los medios no guiados, la transmisión y recepción se realizan mediante antenas. Una antena se puede definir como un conductor eléctrico utilizado para radiar o captar energía electromagnética, al momento de la transmisión la energía eléctrica producida por el transmisor se convierte en energía electromagnética irradiándose al entorno cercano. Los receptores toman esta energía electromagnética y la convierten en energía eléctrica.
 
 >[!tldr] Antenas Parabólicas de Reflexión
->Un tipo muy importante de antenas son las denominadas antenas parabólicas de reflexión, las cuales se utilizan en aplicaciones de microondas terrestres y satelitales. Ya que, debido a su forma se verifica la siguiente propiedad: las ondas reflejadas en una parábola y que provengan de cualquier fuente de energía electromagnética que esté situada en su foco, seguirán trayectorias paralelas al eje de la parábola.
+>Un tipo muy importante de antenas son las denominadas antenas parabólicas de reflexión, las cuales se utilizan en aplicaciones de microondas terrestres y satelitales. Ya que, debido a su forma las ondas reflejadas en una parábola y que provengan de cualquier fuente de energía electromagnética que esté situada en su foco, seguirán trayectorias paralelas al eje de la parábola.
 
 La ***ganancia de una antena*** es una medida de su direccionalidad. Podemos definir dicha ganancia como la potencia de salida, en esa dirección, comparada con la potencia transmitida en cualquier dirección por una antena omnidireccional ideal.
 ### Microondas Terrestres
-
 La antena más común en las microondas es la parabólica tipo plato, que posee un diámetro típico de unos 3 metros. Esta antena se fija rígidamente de forma tal que el haz debe estar perfectamente enfocado siguiendo la trayectoria visual hacia la antena receptora. Para conseguir transmisiones a larga distancia, se concatenan distintos enlaces punto a punto entre antenas situadas en torres adyacentes, hasta cubrir la distancia deseada.
 Este tipo de antenas operan dentro del rango de frecuencias de las microondas y mientras mayor sea la frecuencia mayor será el ancho de banda y por tanto mayor será la velocidad de transmisión. Este tipo de medios se utiliza principalmente para servicios de telecomunicaciones de larga distancia, actuando como una alternativa a medios como el cable coaxial y la fibra óptica.
-
 ### Microondas Satelitales
-
 Un satélite de comunicaciones actúa como una estación que retransmite microondas, enlazando dos o más estaciones base en tierra. Recibe señales en una banda de frecuencia, las amplifica o repite, y luego las retransmite en otra banda de frecuencia. Los satélites geoestacionarios operan en bandas de frecuencias llamadas ***transpondedores***.
 Para que un satélite de comunicaciones funcione con eficacia, generalmente se exige que se mantenga en una órbita geoestacionaria, de lo contrario, no estaría constantemente alineado con las estaciones base. Si dos satélites utilizaran la misma banda de frecuencias y estuvieran suficientemente próximos podrían interferirse mutuamente. Para evitar esto, los estándares actuales exigen una separación mínima que varía de acuerdo al rango de frecuencias sobre las que operan.
-Los satélites pueden orbitar a diferentes distancias de la tierra por ejemplo los satélites geoestacionarios se encuentran a 36000 km de la superficie de la tierra mientras que los satélites de órbita baja se sitúan a una distancia que varía entre los 500 a 2000 km. Adicionalmente, este tipo de satélites son mucho más pequeños siendo, por lo tanto, más baratos y teniendo un menor retardo, el principal inconveniente es que orbitan a mayor velocidad que la tierra por lo que se necesita varios satélites para cubrir un área en particular. Cabe aclarar que a mayor sea la distancia a la que orbita el satélite mayor será la superficie a la que dará servicio.   
+Los satélites pueden orbitar a diferentes distancias de la tierra, por ejemplo, los satélites geoestacionarios se encuentran a 36000 km de la superficie de la tierra mientras que los satélites de órbita baja se sitúan a una distancia que varía entre los 500 a 2000 km. Adicionalmente, este tipo de satélites son mucho más pequeños siendo, por lo tanto, más baratos y teniendo un menor retardo, el principal inconveniente es que orbitan a mayor velocidad que la tierra por lo que se necesita varios satélites para cubrir un área en particular. Cabe aclarar que a mayor sea la distancia a la que orbita el satélite mayor será la superficie a la que dará servicio.   
 Los sistemas satelitales ofrecen tres configuraciones posibles, cada una adecuada para distintas situaciones. Estas configuraciones son:
-
 - **Enlace para difusión (Broadcast)**: Permite la transmisión unidireccional desde un punto central a múltiples estaciones dispares. Este tipo de configuración es la más utilizada para la difusión de señales televisión.
 - **Enlace punto a punto (SCPC)**: Permite establecer un canal de comunicación bidireccional entre dos estaciones terrestres determinadas y permanente, permitiendo enviar cualquier tipo de datos a través de múltiples subcanales, los cuales pueden varias dinámicamente a lo largo del tiempo. Este tipo de configuraciones suele utilizarse en casos donde el nivel de tráfico entre dos estaciones es alta.
 - **Enlace multipunto (VSAT)**: Permite la transmisión de señales bidireccionales entre una estación primaria y múltiples estaciones secundarias, asignando el canal a demanda, esto quiere decir que los tiempos de respuesta están fuertemente determinados por el nivel de tráfico. Este tipo de configuraciones suele aplicarse en organizaciones que poseen un centro de cómputo central y múltiples delegaciones o sucursales que emplean sus servicios.
-
 ### Ondas de Radio
-
 A diferencia de las microondas, las ondas de radio se caracterizan por ser omnidireccionales, esto hace que este tipo de ondas no necesiten de antenas parabólicas ni que dichas antenas estén aisladas sobre una plataforma para estar alineadas.
-A diferencia de las microondas, las ondas de radio son menos afectadas por la lluvia y sufren menos atenuación debido a su mayor longitud de onda. Sin embargo, un problema común es la interferencia por multitrayectorias, causada por reflexiones en la superficie terrestre, el mar u otros objetos, que puede provocar la aparición de imágenes dobles en receptores de TV.
-
+A diferencia de las microondas, las ondas de radio son menos afectadas por la lluvia y sufren menos atenuación debido a su mayor longitud de onda. Sin embargo, un problema común es la interferencia por multitrayectorias, causada por reflexiones en la superficie terrestre, el mar u otros objetos.
 ## Cableado Estructurado
-
-El cableado estructurado es un conjunto de normas que estandarizan el cableado y los componentes utilizados para proporcionar una infraestructura de telecomunicaciones para edificios comerciales. Está diseñado para soportar múltiples tipos de sistemas de hardware, permitiendo una fácil administración y escalabilidad. A grandes rasgos las siguientes normas definen tanto los componentes como el cableado y canalizaciones del cableado estructurado:
-
+El cableado estructurado es un conjunto de normas que estandarizan el cableado y los componentes utilizados para proporcionar infraestructura de telecomunicaciones a edificios comerciales. Está diseñado para soportar múltiples tipos de sistemas de hardware, permitiendo una fácil administración y escalabilidad. A grandes rasgos las siguientes normas definen tanto los componentes como el cableado y canalizaciones del cableado estructurado:
 - **ANSI/TIA/EIA-569**: Provee especificaciones para el diseño de las instalaciones y la infraestructura edilicia necesaria para el cableado de telecomunicaciones en edificios comerciales, teniendo en cuenta que tanto los edificios así como los sistemas de telecomunicaciones son dinámicos.
 - **ANSI/J-STD-607**: Tierras y aterramientos para los sistemas de telecomunicaciones de edificios comerciales
 - **ANSI/TIA/EIA-568**: Especifica los requerimientos de un sistema integral de cableado, independiente de las aplicaciones y de los proveedores, para los edificios comerciales. Las distintas partes de esta normal definen los requisitos generales en cuatro a las componentes para poder colocar infraestructura de telecomunicaciones. Además, esta misma norma específica los diferentes requisitos necesarios para realizar el cableado los diferentes medios de transmisión existentes.
 
 El estándar ANSI/TIA/EIA-569 identifica seis componentes principales presentes en la infraestructura de red de un edificio comercial, las cuales son:
-
 1. **Instalaciones de Entrada**: Es el lugar por donde ingresan los servicios de telecomunicaciones al edificio y/o de interconexión con otros edificios.
 2. **Sala de Equipos**: Habitación dedicada a alojar los equipamientos de telecomunicaciones comunes al edificio, tales como servidores, equipos, centrales telefónicas (PBX), entre otras.
 3. **Canalizaciones de Backbone**: Son los cables troncales tanto internos, como externos al edificio. Estos cables puede ir a través de ductos, bandejas, de forma subterránea o aéreas.
 4. **Armarios de Telecomunicaciones**: Armarios o salas que contienen los puntos de terminación e interconexión de cableado, equipamiento de control y de telecomunicaciones (hubs, switches).
 5. **Canalizaciones horizontales**: Son un conjunto de cables que vinculan los armarios (o salas) de telecomunicaciones con las áreas de trabajo.
 6. **Áreas de trabajo**: Son las habitaciones o espacios dónde se ubican los escritorios, boxes, o sitios que hagan uso de los equipamientos de telecomunicaciones.
-
 ### Hardware para Redes de Área Local
-
-Al momento de realizar el cableado e instalación de una red en un edificio, existen ciertos estándares que definen como realizar dicho cableado y qué medios de transmisión utilizar para cada caso en particular. Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
-
-### Repetidores (Repeaters)
-
-El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales analógicas. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, los cuales son capaces de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia.
+Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
+#### Repetidores (Repeaters)
+El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, los cuales son capaces de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia.
 Al ser un dispositivo ubicado en la capa física el mismo no entiende de tramas ni direcciones físicas, es un dispositivo que se encarga únicamente de replicar y amplificar señales eléctricas.
-
-### Puentes (Bridges)
-
+#### Puentes (Bridges)
 Los puentes son dispositivos que sirve para interconectar segmentos de red formando una sola subred administrada por el mismo puente. Son piezas de hardware que tienen CPU, memoria y dos interfaces de red, situándose así en el segundo nivel del modelo OSI, la principal diferencia entre los puentes y los repetidores es que los puentes utilizan una interfaz de red y por eso son capaces de entender y manejar tramas, realizando algunas tareas como el filtraje de tráfico, el control de error de las tramas y además determinan a qué segmento de la red se debe ser enviada una trama.
 La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen. Permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además, los puentes son capaces de llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
-
-### Conmutadores (Switches)
-
+#### Conmutadores (Switches)
 Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs, los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que los conmutadores administran de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
 
 >[!info] Mantenimiento de Tablas de Direcciones MAC
 >Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
 
 Si bien tanto los conmutadores como los puentes pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
-
-### Enrutadores (Routers)
-
-Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, además de permitir segmentar la red en subredes.
+#### Enrutadores (Routers)
+Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su direccionamiento. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, además de permitir segmentar la red en subredes.
 
