--- a/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
@@ -1,32 +1,23 @@
 La banda ancha es un término que se refiere a las tecnologías de telecomunicaciones que permiten la transmisión de datos a alta velocidad, facilitando el acceso a Internet y otros servicios digitales. Entre las tecnologías de banda ancha más comunes se encuentran los modems telefónicos, los módems DSL que utilizan líneas telefónicas para ofrecer acceso a Internet, y LMDS, que emplea frecuencias de microondas para la transmisión inalámbrica de datos.
-
 ## Modems Telefónicos
-
 Los módems telefónicos son dispositivos que emplean técnicas de modulación digital para transformar datos digitales en señales analógicas. Estas señales son posteriormente decodificadas por un receptor en el otro extremo del enlace de comunicación. Los módems pueden estar integrados en las computadoras o ser dispositivos externos independientes.
 Estos dispositivos se utilizan principalmente para la transmisión bidireccional de bits entre dos computadoras a través de las líneas telefónicas convencionales, que suelen utilizar cables coaxiales. Una de las principales limitaciones de las líneas telefónicas es su ancho de banda restringido, típicamente limitado a 3100 Hz, lo que las convierte en uno de los medios con menor capacidad para la transmisión de datos.
 Además, existen los sistemas de cable módem, que forman parte de una infraestructura más amplia diseñada para la distribución de servicios múltiples, incluyendo video, datos y telefonía. Estos sistemas se apoyan en una red combinada de fibra óptica y cable coaxial. El nodo principal en esta red actúa como un centro de concentración y distribución de estos servicios, facilitando la transmisión eficiente desde el nodo principal hasta los usuarios finales.
 La evolución de los módems ha sido fundamental para el desarrollo de las comunicaciones a distancia, permitiendo no solo la conexión a internet, sino también la integración de diversas formas de comunicación multimedia sobre la misma infraestructura física.
-
 ## Línea de Suscripción Digital (DSL)
-
 DSL (Digital Subscriber Line) y ADSL (Asymmetric DSL) son tecnologías que utilizan los pares telefónicos de cobre de la “última milla” para proporcionar un canal de datos de alta velocidad simultáneamente con el servicio telefónico. ADSL, en particular, utiliza el par de cobre telefónico para brindar acceso a la red de datos y al servicio telefónico al mismo tiempo, caracterizándose por su capacidad asimétrica de manejar dos tipos de velocidades, una más alta desde la central hacia el usuario y otra menor en sentido contrario.
 ADSL requiere el uso de un ***splitter*** para separar las frecuencias de voz y datos, ofreciendo velocidades de descarga de hasta 1,5 Mbps a distancias de 5-6 Km y de 9 Mbps para distancias de 3 Km. La tecnología ADSL divide el espectro de frecuencias disponible en múltiples canales, reservando gran parte de estos canales para el flujo descendente de datos, esto significa que siempre se tendrá mayor velocidad de descarga que de subida. Utiliza un espectro de hasta 1.1 MHz para ofrecer velocidades de hasta 24 Mbps en el flujo descendente, dependiendo de la distancia y la calidad de la línea.
 ADSL Lite (G. Lite) es un subconjunto de ADSL que se caracteriza por no utilizar divisores de frecuencia en el hogar del abonado. El módem G. Lite puede ser una tarjeta NIC en la PC o un dispositivo externo, ofreciendo velocidades de descarga de 1,5 Mbps y velocidades de carga de 384 Kbps, con una distancia máxima de alrededor de 6 Km, dependiendo de la calidad del cableado.
 La capacidad y la velocidad de la conexión ADSL disminuyen con la distancia desde la central telefónica, limitando la disponibilidad del servicio a clientes más distantes. Esta tecnología facilita la implementación sin afectar los servicios telefónicos existentes y es adecuada para usuarios que requieren mayor velocidad de descarga que de carga.
-
 ## Sistema de Distribución Local Multipunto (LMDS)
-
 El sistema de distribución local multipunto (LMDS) es una tecnología de acceso inalámbrico de banda ancha originalmente diseñada para la transmisión de televisión digital. Funciona como una tecnología inalámbrica multipunto, utilizada principalmente en la última milla de las redes de telecomunicaciones.
 LMDS utiliza una arquitectura de red similar a la celular, empleando frecuencias de microondas típicamente en las bandas de 26 GHz y 29 GHz. El sistema se configura con una estación base que comunica a través de estas altas frecuencias con varias estaciones de suscriptores, proporcionando un método para distribuir servicios directamente a los usuarios.
-La tecnología ofrece un ancho de banda sustancial, capaz de soportar datos, Internet, voz y servicios de video. La capacidad de rendimiento y la distancia confiable del enlace dependen de las restricciones específicas del enlace de radio y del método de modulación utilizado, como la modulación por desplazamiento de fase o la modulación de amplitud. Sin embargo, el alcance efectivo de LMDS está típicamente limitado a unos 2.4 km debido a la atenuación por lluvia, aunque se pueden lograr enlaces de despliegue de hasta 8 km desde la estación base en condiciones específicas.
+La tecnología ofrece un ancho de banda sustancial, capaz de soportar datos, Internet, voz y servicios de video. La capacidad de rendimiento y la distancia confiable del enlace dependen de las restricciones específicas del enlace de radio y del método de modulación utilizado. Sin embargo, el alcance efectivo de LMDS está típicamente limitado a unos 2.4 km debido a la atenuación por lluvia, aunque se pueden lograr enlaces mayores en situaciones específicas.
 A pesar de su promesa inicial, LMDS ha sido lento en encontrar tracción comercial y ha sido en gran parte superado por tecnologías más nuevas como LTE, WiMax y 5G NR, especialmente en los mercados de consumo. Sin embargo, todavía se utiliza en algunas aplicaciones para backhaul de alta capacidad, particularmente para interconectar redes como GSM, UMTS, LTE y Wi-Fi.
-
 ## Wi-Fi 6
-
 Wi-Fi 6 se basa en el estándar IEEE 802.11ax, el cual está diseñado para proveer capacidad, eficiencia, amplia cobertura y rendimiento requeridos por los usuarios actuales en entornos de Wi-Fi exigentes.
-Esta tecnología se centra en brindar una conexión de calidad en lugares con cientos o miles de dispositivos conectados, como estadios, salones de conferencias y otros lugares públicos, así como en redes corporativas que utilizan aplicaciones que demandan bajo retardo y gran ancho de banda. Además, garantiza que cada dispositivo funcione a un nivel óptimo, cumpla las normas más estrictas de seguridad e interoperabilidad, y logre un menor consumo de batería.
+Esta tecnología se centra en brindar una conexión de calidad en lugares con cientos o miles de dispositivos conectados, así como en redes corporativas que utilizan aplicaciones que demandan bajo retardo y gran ancho de banda. Además, garantiza que cada dispositivo funcione a un nivel óptimo, cumpliendo las normas más estrictas de seguridad e interoperabilidad, y logre un menor consumo de batería.
 Las redes Wi-Fi 6 son capaces de operar sobre bandas de frecuencias de hasta 6GHz, dividiendo dicho ancho de banda en diferentes subcanales permitiendo así el envío de información a diferentes puntos de acceso. El ancho de banda permite ser divido de dos formas:
-
 1. Se puede dividir el ancho de banda en 14 canales de 80MHz cada uno.
 2. Se puede dividir el ancho de banda en 7 canales de 160MHz cada uno.
 
