--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes Inalambricas y Virtuales.md
@@ -1,69 +1,57 @@
 ## Redes de Área Local Inalámbricas (WLAN)
-
-Al igual que para Ethernet, existen un apartado de la IEEE 802 que especifica todo lo relacionado con redes de área local inalámbricas. A través de este estándar podemos distinguir cuatro áreas de aplicación para este tipo de redes LAN:
-
+Existen un apartado de la IEEE 802 que especifica todo lo relacionado con redes de área local inalámbricas. A través de este estándar podemos distinguir cuatro áreas de aplicación para este tipo de redes LAN:
 1. **Ampliación de redes LAN**. Las LAN inalámbricas son cruciales en entornos con grandes superficies o edificios históricos, donde el cableado tradicional no es viable o permitido. Estas redes inalámbricas suelen coexistir con redes cableadas. Además, existen configuraciones de LAN inalámbricas, como la de celda única y de múltiples celdas, donde uno o varios módulos de control gestionan la conectividad y el acceso de los dispositivos finales.
 2. **Interconexión de edificios**. Otra aplicación muy común de las redes inalámbricas es para conectar dos edificios vecinos a través de un enlace punto a punto.
 3. **Acceso nómada**. En entorno amplio, como un campus o un centro financiero situado lejos de un grupo de edificios. Los usuarios se pueden desplazar con sus computadores portátiles y pueden desear conectarse con los servidores de una LAN inalámbrica desde distintos lugares.
 4. **Redes ad-hoc**. Una red ad hoc es una red entre iguales, sin servidor central, establecida temporalmente para satisfacer alguna necesidad inmediata. Este tipo de redes inalámbricas no tienen una infraestructura como tal, los participantes de esta red utilizan sus propios recursos a la hora de establecer una conexión.
 
 Las redes LAN inalámbricas se clasifican, generalmente, de acuerdo con la técnica de transmisión que utilizan. Todas las LAN inalámbricas actuales se encuentran dentro de una de las siguientes categorías:
-
 - **LAN de infrarrojos (IR)**: Una celda individual en una LAN IR está limitada a una sola habitación, dado que la luz infrarroja no es capaz de atravesar muros opacos.
 - **LAN de espectro expandido**: Hace uso de tecnologías de transmisión de espectro expandido. En la mayoría de los casos, estas LAN funcionan en las bandas ISM, de modo que no se necesita licencia FCC.
 - **Microondas de banda estrecha**: estas LAN operan en el rango de las microondas, pero no hacen uso de espectro expandido. Algunos de estos productos funcionan a frecuencias para las que es necesaria una licencia FCC, mientras que otras lo hacen en alguna de las bandas ISM.
 
 Actualmente, las redes LAN inalámbricas más populares son aquellas que utilizan técnicas de espectro expandido. Este tipo de redes generalmente adoptan una disposición de celdas múltiples donde celdas adyacentes usan diferentes frecuencias para evitar interferencias, pudiendo adoptar una topología basada en concentradores, situados en lugares como el techo y conectados a LAN cableadas, u optar por una configuración entre iguales usando algoritmos MAC como CSMA para controlar el acceso. Los concentradores facilitan la conectividad entre redes y pueden controlar la transición de estaciones móviles entre celdas. Además, es deseable que estas redes operen sin necesidad de licencia.
-El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Motorola, con 600 licencias en Estados Unidos, controla la frecuencia de 18 GHz para asegurar comunicaciones sin interferencias entre redes LAN en áreas metropolitanas. Estas frecuencias son gestionadas por la FCC y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas. A diferencia de las bandas ISM no reguladas, las bandas con licencia ofrecen seguridad legal contra las interferencias.
-
+El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Estas frecuencias son gestionadas por un regulador y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas.
 ### Arquitectura y Servicios IEEE 802.11
-
-En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas. El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones ejecutando el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico compartido. Pudiendo funcionar de forma aislada o estar conectados a un ***sistema troncal distribuido (DS)*** a través de un ***punto de acceso (AP)*** que funciona como puente entre los distintos BSS. El protocolo MAC puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
+En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas.
+El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones que ejecutan el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico. Las BSS pueden funcionar de forma aislada o estar conectados a un ***sistema troncal distribuido (DS)*** a través de un ***punto de acceso (AP)*** que funciona como puente entre los distintos BSS. El protocolo de control de acceso al medio puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
 Un ***conjunto extendido de servicios (ESS)*** consiste en dos o más conjuntos básicos de servicios interconectados mediante un sistema de distribución. Este conjunto extendido de servicios aparece a nivel de control de enlace lógico como una única red LAN lógica.
 
 ![[conjunto-extendido-servicios.png]]
 
-Por otro lado, la normativa IEEE 802.11 define nueve servicios que deben ser proporcionados por una red inalámbrica para ofrecer una funcionalidad equivalente a la de una LAN cableada tradicional, entre las cuales se encuentran los siguientes servicios:
-
+La normativa IEEE 802.11 define nueve servicios que deben ser proporcionados por una red inalámbrica con el fin de ofrecer una funcionalidad equivalente a la de una LAN cableada tradicional, entre las cuales se encuentran los siguientes servicios:
 1. **Distribución**: Es el servicio primario utilizado por las estaciones para intercambiar tramas MAC cuando la trama debe atravesar el DS para pasar de una estación en un BSS a otra estación en un BSS diferente.
 2. **Integración**: Permite la transferencia de datos entre una estación situada en una LAN IEEE 802.11 y otra estación en una LAN IEEE 802.X.
 
 >[!tldr] Capa MAC y Transición
->El objetivo principal de la capa MAC es la transferencia de MSDU (MAC Service Data Unit) entre entidades MAC, tarea realizada por el servicio de distribución que requiere información de las estaciones dentro del ESS, proporcionada por los servicios de asociación. Antes de entregar o aceptar datos de una estación, esta debe estar asociada, lo que lleva al concepto de movilidad. Hay tres tipos de transiciones:
->
+>El objetivo principal de la subcapa MAC es la transferencia de MSDU (MAC Service Data Unit) entre nodos, esta tarea es realizada por el servicio de distribución que requiere información de las estaciones dentro del ESS, esta información es proporcionada por los servicios de asociación. Antes de entregar o aceptar datos de una estación, esta debe estar asociada, lo que lleva al concepto de movilidad. Hay tres tipos de transiciones:
 >1. **Sin transición:** La estación es estacionaria o se mueve solo dentro del rango de un único BSS.
 >2. **Transición BSS:** La estación se mueve de un BSS a otro dentro del mismo ESS, requiriendo que la función de direccionamiento reconozca su nueva ubicación.
 >3. **Transición ESS:** La estación se mueve entre BSS de diferentes ESS, donde la continuidad de las conexiones de capas altas no está garantizada y puede haber interrupciones.
-> 
->Para la entrega de mensajes, el servicio de distribución necesita conocer la ubicación exacta de la estación destino y la identidad del punto de acceso al que debe entregarse el mensaje. Esto implica mantener una asociación con el punto de acceso del BSS actual. Hay tres servicios clave para gestionar estas asociaciones, los cuales son la asociación, la reasociación y la disociación.
+>
+>Para la entrega de mensajes, el servicio de distribución necesita conocer la ubicación exacta de la estación de destino y la identidad del punto de acceso al que debe entregarse el mensaje. Esto implica mantener una asociación con el punto de acceso del BSS actual. Hay tres servicios clave para gestionar estas asociaciones, los cuales son la asociación, la reasociación y la disociación.
 
-3. **Asociación:** Establece una relación inicial entre una estación y un punto de acceso, permitiendo que la estación transmita o reciba tramas.
+3. **Asociación:** Establece una relación inicial entre una estación y un punto de acceso, permitiendo que la estación transmita o reciba tramas hacia y desde otras BSS.
 4. **Reasociación:** Permite transferir una asociación existente a otro punto de acceso, facilitando el movimiento del terminal de un BSS a otro.
 5. **Disociación:** Señala el fin de una asociación, esta señal puede ser emitida por la estación o el punto de acceso. Una estación debería proporcionar este aviso antes de abandonar un ESS o apagarse. No obstante, las funciones de gestión MAC incluyen mecanismos para protegerse frente a estaciones que desaparezcan sin emitir esta notificación.
 6. **Autenticación:** Utilizado por las estaciones para establecer y comunicar su identidad antes de asociarse con un punto de acceso. En entornos inalámbricos, la autenticación es crucial debido a la accesibilidad abierta de la red. El estándar admite múltiples esquemas de autenticación, desde básicos hasta avanzados con cifrado de llave pública, pero requiere que la autenticación sea mutuamente aceptada antes de establecer una conexión con un punto de acceso.
 7. **Fin de la autenticación:** Este servicio se utiliza para finalizar una sesión de autenticación existente, asegurando que las conexiones sean terminadas adecuadamente.
 8. **Privacidad:** Asegura que los contenidos de los mensajes sean accesibles únicamente para el receptor legítimo. El estándar permite el uso opcional de cifrado para proteger la información transmitida, evitando la lectura por partes no autorizadas.
 9. **Entrega de MSDU**: Una MSDU es un bloque de datos que el usuario MAC le pasa a la capa MAC, generalmente en la forma de una PDU LLC. Si una MSDU es demasiado grande para ser transmitida en una sola trama MAC, puede ser fragmentada y transmitida en una serie de tramas.
-
 ### Control de Acceso al Medio
-
-La capa MAC de IEEE 802.11 cubre tres aspectos funcionales la entrega fiable de datos, el control de acceso y la seguridad. A continuación describiremos más a detalle cada uno de estos aspectos.
-
+La capa MAC de IEEE 802.11 cubre tres aspectos funcionales: la entrega fiable de datos, el control de acceso y la seguridad. A continuación describiremos más a detalle cada uno de estos aspectos.
 #### Entrega Fiable de Datos
-
-El ruido, las interferencias y otros efectos de propagación repercuten en la pérdida de un número significativo de tramas. Incluso disponiendo de códigos correctores de errores, es posible que muchas tramas MAC no sean recibidas apropiadamente. Si bien este problema puede ser solucionado delegando el problema de la corrección de errores a capas superiores esto no es lo más eficiente, es por eso que el estándar incluye un protocolo de intercambio de tramas. Cuando una estación recibe una trama de datos, envía una trama de confirmación de vuelta a la estación de origen. Este intercambio es indivisible y no debe ser interrumpido por otras transmisiones. Si la estación de origen no recibe la confirmación rápidamente, posiblemente debido a daños en la trama de datos o de control, retransmitirá la trama.
-Para aumentar la fiabilidad, se puede emplear un esquema de cuatro tramas. Primero, el emisor envía una ***trama de solicitud para enviar (RTS)*** al destino, el receptor responde con una ***trama de permiso para enviar (CTS)***. Después de recibir esta trama, el emisor envía la trama de datos y el destino responde con una confirmación. La trama RTS sirve para notificar a las estaciones cercanas que una transmisión está en curso, evitando interferencias.
-
+El ruido, las interferencias y otros efectos de propagación repercuten en la pérdida de un número significativo de tramas. Incluso disponiendo de códigos correctores de errores, es posible que muchas tramas no sean recibidas apropiadamente. Si bien este problema puede ser solucionado delegando la corrección de errores a capas superiores esto no es lo más eficiente, es por eso que el mismo estándar define un protocolo de intercambio de tramas.
+Cuando una estación recibe una trama de datos, envía una trama de confirmación de vuelta a la estación de origen. Este intercambio es indivisible y no debe ser interrumpido por otras transmisiones. Si la estación de origen no recibe la confirmación rápidamente, posiblemente debido a daños en la trama de datos o de control, retransmitirá la trama.
+La fiabilidad en la transmisión de datos se puede aumentar empleando un esquema de cuatro tramas. Primero, el emisor envía una ***trama de solicitud para enviar (RTS)*** al destino, el receptor responde con una ***trama de permiso para enviar (CTS)***. Después de recibir esta trama, el emisor envía la trama de datos y el destino responde con una confirmación. La trama RTS sirve para notificar a las estaciones cercanas que una transmisión está en curso, evitando interferencias.
 #### Control de Acceso
+El estándar evaluó dos enfoques para los protocolos de control de acceso al medio. Los protocolos de acceso distribuido y los protocolos de acceso centralizado. Los primeros distribuyen la decisión de transmisión entre todos los nodos mediante detección de portadora. Los segundos cuentan con una autoridad central que regula la transmisión.
 
-El estándar evaluó dos enfoques para los algoritmos MAC, los protocolos de acceso distribuido y los protocolos de acceso centralizado. Los primeros distribuyen la decisión de transmisión entre todos los nodos mediante detección de portadora. Los segundos cuentan con una autoridad central que regula la transmisión.
-
->[!tldr] Utilización de los Enfoques
+>[!tldr] Utilización del Enfoque Distribuido y Centralizado
 >Los protocolos de acceso distribuido son adecuados para redes ad-hoc y otras configuraciones de LAN inalámbricas con tráfico intermitente. Mientras que los protocolos de acceso centralizado son ideales para redes con estaciones interconectadas a través de una estación base que sirve de enlace con una LAN troncal y son beneficiosos para datos de alta prioridad o con requisitos de tiempo real.
 
-El resultado final definido en el estándar es el algoritmo llamado ***DFWMAC (Distributed Foundation Wireless MAC)***, que combina un control de acceso distribuido con un control centralizado opcional. La subcapa MAC inferior, la ***función de coordinación distribuida (DCF)***, utiliza un algoritmo de contención para gestionar el acceso general. Para tráfico prioritario y sin contención, se utiliza la ***función de coordinación puntual (PCF)***, que se sitúa sobre la DCF y aprovecha sus características para garantizar el acceso a sus usuarios.
-La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, este protocolo de acceso al medio intenta evitar las colisiones al máximo. No incluye detección de colisiones porque en redes inalámbricas es difícil diferenciar entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
-
+El resultado final definido en el estándar recibe el nombre de ***DFWMAC (Distributed Foundation Wireless MAC)***, que combina un control de acceso distribuido con un control centralizado opcional. La subcapa MAC emplea una ***función de coordinación distribuida (DCF)*** que utiliza un algoritmo de contención para gestionar el acceso general al medio. Para tráfico de alta prioridad y sin contención se utiliza una ***función de coordinación puntual (PCF)***, que se sitúa sobre DCF y aprovecha sus características para garantizar el acceso a sus usuarios.
+La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, este protocolo de acceso al medio intenta evitar las colisiones al máximo. No utiliza detección de colisiones porque en redes inalámbricas enviar datos por el medio es mucho mas costoso, además de ser difícil encontrar diferencias entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
 1. **SIFS (Short IFS):** El más corto, usado para respuestas rápidas como confirmaciones y asegura la prioridad más alta en la transmisión.
 2. **PIFS (Point Coordination Function IFS):** De longitud media, usado por el controlador central en PCF para emitir sondeos y tiene prioridad sobre el tráfico normal.
 3. **DIFS (Distributed Coordination Function IFS):** El más largo, utilizado para tráfico ordinario y asincrónico.
@@ -72,13 +60,10 @@ La espera entre tramas permite una gestión eficiente del tráfico, donde la esp
 La subcapa PCF se implementa por sobre DCF. En este método de acceso existirá un coordinador central que gestiona la red mediante sondeos utilizando un PIFS, que es más corto que un DIFS. Esto permite al coordinador tomar control del medio rápidamente, bloqueando el tráfico asíncrono mientras realiza y recibe respuestas a los sondeos.
 En un escenario extremo, el coordinador podría, teóricamente, monopolizar el medio emitiendo sondeos continuamente, especialmente en redes con estaciones que tienen tráfico sensible a los retardos. Para mitigar esto, se usa una estructura llamada *supertrama*, que divide el tiempo entre un período controlado por el coordinador y un período de contención para acceso asíncrono. Durante la primera parte de la *supertrama*, el coordinador realiza sondeos siguiendo un esquema de turno rotatorio. Después, se reserva un tiempo para que otras estaciones accedan al medio de manera competitiva.
 Este enfoque permite equilibrar entre el control centralizado y el acceso competitivo, asegurando que tanto el tráfico prioritario como el tráfico regular tengan oportunidades de transmisión.
-
 ### Formato de Trama
-
-Si bien existen tres tipos de tramas, el formato genérico de una trama MAC para las redes de área local inalámbricas tiene los siguientes campos:
-
+Si bien existen tres tipos de tramas, el formato genérico de una trama para las redes de área local inalámbricas tiene los siguientes campos:
 - **Control de trama**: Indica el tipo de trama (control, gestión o datos) y proporciona información de control. La información de control indica si la trama proviene o va destinada a un DS, además de información adicional de control y relativa a la privacidad.
-- **ID de duración/conexión**: Si se utiliza como un campo de duración, indica el tiempo (en microsegundos) que el canal será reservado para una transmisión satisfactoria de una trama MAC. En algunas tramas de control, este campo contiene el identificador de una asociación o de una conexión.
+- **ID de duración/conexión**: Si se utiliza como un campo de duración, indica el tiempo (en microsegundos) que el canal será reservado para una transmisión satisfactoria de una trama. En algunas tramas de control, este campo contiene el identificador de una asociación o de una conexión.
 - **Direcciones**: El número y significado de los campos de direcciones dependen del contexto. Los tipos de direcciones son la de la fuente, el destino, la estación transmisora y la estación receptora.
 - **Control de secuencia**: Contiene un subcampo de 4 bits utilizado para la fragmentación y el reensamblado, y un número de secuencia de 12 bits utilizado para numerar las tramas enviadas entre un transmisor dado y un receptor.
 - **Cuerpo de la trama**: Contiene una MSDU completa o un fragmento de la misma. La MSDU es una unidad de datos del protocolo LLC o información de control MAC.
@@ -87,9 +72,7 @@ Si bien existen tres tipos de tramas, el formato genérico de una trama MAC para
 ![[trama-wifi.png]]
 
 #### Tipos de Trama 
-
 Como se mencionó anteriormente para las redes de área local inalámbrica existen tres tipos de trama, las de control, las de datos y las de gestión. Las tramas de control prestan servicio que aseguran la entrega fiable de tramas de datos. Existen seis subtipos de tramas de control:
-
 - **Sondeo de ahorro de energía (PS-Poll, Power Save-Poll)**: Esta trama es enviada por cualquier estación hacia la estación que contiene el punto de acceso. Su objetivo es solicitar al punto de acceso que transmita una trama destinada a esta estación que ha sido almacenada en una memoria temporal debido a que la estación se encontraba en modo de ahorro de energía.
 - **Solicitud para enviar (RTS)**: Esta trama se emplea para notificar tanto al destinatario potencial como a las demás estaciones dentro del alcance de que se planea enviar una trama de datos a ese destinatario específico.
 - **Permiso para enviar (CTS)**: Se trata de la segunda trama en el protocolo de cuatro pasos. Es enviada por el receptor hacia el emisor para concederle permiso para emitir una trama de datos.
@@ -98,7 +81,6 @@ Como se mencionó anteriormente para las redes de área local inalámbrica exist
 - **CF-End + CF-Ack**: Confirmación de la trama CF-End. Esta trama finaliza el periodo libre de contención y libera a las estaciones de las restricciones asociadas con este periodo.
 
 Por parte de la trama de datos, existen ocho subtipos de tramas que pueden ser organizados en dos grupos. Los primeros cuatro subtipos definen tramas que transportan datos de una capa superior desde el emisor hasta el receptor, estas tramas son las siguientes:
-
 - **Datos**: Se trata de la trama de datos más simple. Puede ser utilizada tanto en el periodo de contención como en el periodo libre de contención.
 - **Datos + CF-Ack**: Únicamente puede ser enviada durante el periodo libre de contención. Además de transportar datos, esta trama confirma la recepción de otros previamente recibidos.
 - **Datos + CF-Poll**: Se utiliza por parte de un coordinador puntual para entregar datos a una estación móvil y para solicitar que esta envíe una trama de datos que puede haber sido almacenada temporalmente.
@@ -109,16 +91,13 @@ Por parte de la trama de datos, existen ocho subtipos de tramas que pueden ser o
 >Las tres tramas restantes poseen la misma funcionalidad que los subtipos de tramas de datos correspondientes que se han comentado en la lista anterior, pero sin transportar datos.
 
 Por último la ***trama de gestión*** se utilizan para gestionar las comunicaciones entre las estaciones y los puntos de acceso. Las funciones que cubren incluyen la gestión de las asociaciones, es decir, la solicitud, respuesta, resolución, disociación y autenticación.
-
 ## Redes de Área Local Virtuales (VLAN)
-
 En la actualidad muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
-
 - **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
 - **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
 - **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
 
-Afortunadamente, cada una de estas desventajas puede ser abordada mediante el uso de conmutadores compatibles con _**redes de área local virtuales (VLAN)**_. Estos conmutadores permiten definir múltiples VLAN sobre una única infraestructura física de red de área local.
+Cada una de estas desventajas puede ser abordada mediante el uso de conmutadores compatibles con _**redes de área local virtuales (VLAN)**_. Estos conmutadores permiten definir múltiples VLAN sobre una única infraestructura física de red de área local.
 En una VLAN basada en puertos, el administrador de la red divide las interfaces del conmutador en grupos. Cada grupo constituye una VLAN, donde los puertos de cada VLAN forman un dominio de difusión. Con esta configuración, solo los dispositivos pertenecientes al mismo grupo recibirán los mensajes de difusión, aislando así el tráfico interno de la organización.
 Debido a este aislamiento, es imposible intercambiar tráfico entre los distintos grupos de la red. Este inconveniente se resuelve conectando una de las interfaces de cada grupo a un router, que se encargará de redirigir el tráfico entre VLAN. Afortunadamente, muchos conmutadores modernos ya incluyen un router integrado que gestiona el redireccionamiento entre VLAN.
 Un aspecto interesante de las VLAN es que permiten que dispositivos ubicados en diferentes edificios pertenezcan a la misma red virtual. Esto se logra interconectando los distintos conmutadores VLAN mediante la técnica conocida como _**troncalización VLAN (VLAN Trunking)**_. Esta técnica configura una interfaz como troncal, la cual conecta ambos conmutadores VLAN. El puerto troncal pertenece a todas las VLAN, y las tramas enviadas a cualquier VLAN son reenviadas a través del enlace troncal hacia el otro conmutador.
@@ -147,22 +126,21 @@ Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a tras
 >Por otro lado, en las VLAN dinámicas, el switch determina automáticamente a qué VLAN pertenece cada estación de trabajo basándose en su **dirección física (MAC)**, **dirección lógica (IP)** o **protocolo**. Esto significa que las estaciones pueden moverse dentro de la red, y el switch reasigna automáticamente la VLAN correcta según la configuración predefinida, brindando una mayor flexibilidad, ya que no requieren reconfiguraciones manuales cuando se cambian las estaciones de puerto o ubicación.
 
 ## World Interoperability for Microwave Access (WiMAX)
-
 WiMAX es una familia de estándares IEEE 802.16 que trata de suministrar datos inalámbricos a un gran número de usuarios en un área extensa, a velocidades capaces de competir con las de los modems por cable y las redes ADSL.
-La arquitectura básica propuesta en el estándar consta de una estación base que centraliza un número potencialmente grande de clientes, en este sentido es similar a una red Wi-Fi. La estación base coordina la transmisión de los paquetes de la capa de enlace de forma bidireccional, es decir, desde el emisor al receptor y viceversa. Todo esto utilizando multiplexación por división de tiempo, aunque el tamaño de los marcos son variables, ya que al momento de la transmisión la estación base envía un listado de mensajes ***MAP (Media Access Protocol)*** que informa a las estaciones receptoras las propiedades de la capa física que se utilizarán para transmitir las subsiguientes ráfagas de tramas dentro de la estructura de marcos.
-Puede que la estación base decida cambiar las propiedades de la capa física actuales por otras que se adapten mejor a las capacidades actuales de los receptores. La estación base también puede seleccionar de forma arbitraria a un conjunto de receptores a los que se le va a enviar tanto la configuración como las ráfagas de tramas. Este método de *planificación optimista* permite hacer un uso óptimo del medio.
-Una estación base WiMAX también regula el acceso de las estaciones de abonado al canal ascendente mediante el uso de mensajes ***UL-MAP***. Estos mensajes controlan la cantidad de tiempo durante la cual se da a cada estación de abonado acceso al canal en los subsiguientes canales ascendentes. Los abonados emplean las partes iniciales de la estructura de canal ascendente para transmitir mensajes de control del enlace radio, mensajes para solicitar la admisión y la autenticación en la red WiMAX y mensajes de protocolos de mayor nivel relacionados con la administración, como por ejemplo DHCP y SNMP.
+La arquitectura básica propuesta en el estándar consta de una estación base que centraliza un número potencialmente grande de clientes. La estación base coordina la transmisión de las tramas de forma bidireccional, es decir, desde el emisor al receptor y viceversa. Todo esto utilizando multiplexación por división de tiempo, aunque el tamaño de los marcos son variables, ya que al momento de la transmisión la estación base envía un listado de mensajes ***MAP (Media Access Protocol)*** que informa a las estaciones receptoras las propiedades de la capa física que se utilizarán para transmitir las subsiguientes ráfagas de tramas dentro de la estructura de marcos.
+Puede que la estación base decida cambiar las propiedades de la capa física previamente acordada por otras que se adapten mejor a las capacidades actuales de los receptores. La estación base también puede seleccionar de forma arbitraria a un conjunto de receptores a los que se le va a enviar tanto la configuración como las ráfagas de tramas. Este método de *planificación optimista* permite hacer un uso óptimo del medio.
+Una estación base WiMAX también regula el acceso de las estaciones de abonado al canal ascendente mediante el uso de mensajes ***UL-MAP***. Estos mensajes controlan la cantidad de tiempo durante la cual se da a cada estación de abonado acceso al canal en los subsiguientes canales ascendentes. Los abonados emplean las partes iniciales de la estructura de canal ascendente para transmitir mensajes de control del enlace, mensajes para solicitar la admisión y la autenticación en la red WiMAX y mensajes de protocolos de mayor nivel relacionados con la administración, como por ejemplo DHCP y SNMP.
 
 >[!tldr] Limitaciones al Medio Físico y las Políticas de Acceso al Medio
->El estándar WiMAX no impone un conjunto concreto de parámetros de la capa física que haya que utilizar en una situación determinada; dicha decisión se deja al fabricante del equipo WiMAX y del operador de red. Lo mismo sucede con las políticas para asignar el tiempo de canal ascendente a los nodos, en este caso WiMAX solo proporciona los mecanismos para implementar una política que podría asignar diferentes periodos de tiempo de acceso al canal a las distintas estaciones de abonado.
+>El estándar WiMAX no impone un conjunto concreto de parámetros de la capa física que haya que utilizar en una situación determinada; dicha decisión se deja al fabricante del equipo WiMAX y del operador de la red. Lo mismo sucede con las políticas para asignar el tiempo de canal ascendente a los nodos, en este caso WiMAX solo proporciona los mecanismos para implementar una política que podría asignar diferentes periodos de tiempo de acceso al canal a las distintas estaciones de abonado.
 
-El formato de la trama para las redes WiMAX es el que se muestra en la imagen, el único campo sobre el que hablaremos es del campo identificador de conexión. En WiMAX las direcciones MAC de los dispositivos se puede considerar más apropiadamente como un identificador del equipo, ya que la comunicación entre equipos terminales termina por ser asignada a un identificador de conexión.
+El formato de la trama para las redes WiMAX es el que se muestra en la imagen, aunque solo nos centraremos en el campo identificador de conexión. En WiMAX las direcciones MAC de los dispositivos se puede considerar más apropiadamente como un identificador del equipo, ya que la comunicación entre equipos terminales termina por ser asignada a un identificador de conexión.
 
 ![[trama-wimax.png]]
 
 ## Redes Celulares Inalámbricas
-
-La radio celular es una técnica que fue desarrollada con el fin de incrementar la capacidad disponible para el servicio de telefonía móvil sobre radio. La esencia de una red celular reside en el uso de múltiples transmisores de baja potencia, del orden de 100 W o menos. Como el rango de un transmisor con estas características es pequeño, el área debe ser dividida en celdas, la cual dispone de su propia antena. A cada celda se le asigna una frecuencia y una ***estación base*** que le presta servicios, el resto de celdas adyacentes reciben una asignación distinta de frecuencia para evitar así las interferencias o diafonía. Conceptualmente, las celdas se pueden organizar en distintos patrones, como se ve en la imagen.
+La radio celular es una técnica que fue desarrollada con el fin de incrementar la capacidad disponible para el servicio de telefonía móvil sobre radio. La esencia de una red celular reside en el uso de múltiples transmisores de baja potencia. 
+Como el rango de un transmisor con estas características es pequeño, el área debe ser dividida en celdas, la cual dispone de su propia antena. A cada celda se le asigna una frecuencia y una ***estación base*** que le presta servicios, el resto de celdas adyacentes reciben una asignación distinta de frecuencia para evitar así las interferencias o diafonía. Conceptualmente, las celdas se pueden organizar en distintos patrones, como se ve en la imagen.
 
 ![[patrones-celulas.png]]
 
@@ -173,8 +151,7 @@ El objetivo principal es lograr usar la misma frecuencia en otras celdas cercana
 ![[patron-reutilizacion.png]]
 
 Cabe aclarar que lo mostrado en la imagen es solo uno de los varios patrones que existen para la reutilización de señales.
-
 ## Bluetooth
-
 El estándar IEEE 802.15 define un tipo de red inalámbrica de corto alcance, que opera a una baja potencia y a un bajo coste. Al contrario de las redes definidas por la IEEE 802.11 que poseen un punto de acceso, mayor potencia y una mayor velocidad, tecnologías como Bluetooth no requieren de ningún tipo de infraestructura para operar y posee un alcance más reducido, por esta razón suele referirse a este tipo de redes como redes inalámbricas de área personal (WPAN).
-Estas redes operan en la banda de radio sin licencia de 2,4 GHz en forma TDM, con particiones de tiempo de 625 microsegundos. Durante cada partición de tiempo, un emisor transmite en uno de 79 canales, cambiando el canal de una partición a otra de forma pseudoaleatoria. Este tipo de saltos de canal, que es una técnica conocida con el nombre de ***espectro disperso por salto de frecuencia (FHSS)***. Este tipo de redes son por definición redes ad hoc que puede organizarse en una *piconet* de hasta ocho dispositivos, donde se designa a uno de los dispositivos como maestro, este nodo maestro es el que designa el tiempo de transmisión para cada nodo. Los nodos restantes solo podrán transmitir si tienen permiso del nodo maestro, además solo se podrá enviar datos al nodo maestro.
+Estas redes operan en la banda de radio sin licencia de 2,4 GHz en forma TDM, con particiones de tiempo de 625 microsegundos. Durante cada partición de tiempo, un emisor transmite en uno de 79 canales, cambiando el canal de una partición a otra de forma pseudoaleatoria. Este tipo de saltos de canal, es una técnica conocida con el nombre de ***espectro disperso por salto de frecuencia (FHSS)***.
+Este tipo de redes son por definición redes ad hoc que puede organizarse en una *piconet* de hasta ocho dispositivos, donde se designa a uno de los dispositivos como maestro, este nodo maestro es el que designa el tiempo de transmisión para cada nodo. Los nodos restantes solo podrán transmitir si tienen permiso del nodo maestro, además solo se podrá enviar datos al nodo maestro.
