--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -1,4 +1,5 @@
-El éxito en la transmisión de datos depende fundamentalmente de dos factores fundamentales la calidad de la señal que se transmite y las características del medio de transmisión. Toda comunicación entre dos nodos se realiza a través de un medio de transmisión, los cuales pueden clasificarse como medios guiados y medios no guiados. En los medios guiados, las ondas se transmiten confinándolas a lo largo de un camino físico. Por el contrario, los medios no guiados, también denominados inalámbricos, proporcionan un medio para transmitir las ondas electromagnéticas sin confinarlas, como por ejemplo en la propagación a través del aire, el mar o el vacío.
+El éxito en la transmisión de datos depende fundamentalmente de dos factores fundamentales la calidad de la señal que se transmite y las características del medio de transmisión. Toda comunicación entre dos nodos se realiza a través de un medio de transmisión, los cuales pueden clasificarse como medios guiados y medios no guiados.
+En los medios guiados, las ondas se transmiten confinándolas a lo largo de un camino físico. Por el contrario, los medios no guiados, también denominados inalámbricos, proporcionan un medio para transmitir las ondas electromagnéticas sin confinarlas, como por ejemplo en la propagación a través del aire, el mar o el vacío.
 
 >[!note] Limitaciones en la Comunicación de Señales Electromagnéticas
 >Tanto los datos analógicos como los digitales se pueden transmitir usando señales analógicas o digitales. Es más, esto es ampliable al procesamiento intermedio que se haga entre la fuente y el destino, pudiendo ser igualmente analógico o digital.
@@ -10,7 +11,6 @@ Un medio de transmisión puede ser ***simplex***, ***half-duplex*** o ***full-du
 >Un medio de transmisión guiado es punto a punto si proporciona un enlace directo entre dos dispositivos que comparten el medio y no existiendo ningún otro dispositivo conectado. En una configuración guiada multipunto, el mismo medio es compartido por más de dos dispositivos.
 
 ## Frecuencias, Espectro y Ancho de Banda
-
 Las señales transmitidas pueden representarse como una función dependiente del tiempo. Aunque alternativamente se puede representar en función de la frecuencia, es decir, como una combinación de componentes a diferentes frecuencias. Para comprender y caracterizar mejor el comportamiento de los sistemas de transmisión de datos, el análisis en el ***dominio de la frecuencia*** suele ser más ilustrativo que en el ***dominio del tiempo***.
 En este contexto una ***señal analógica*** es aquella en la que la intensidad de la señal varía suavemente en el tiempo. Es decir, no presenta saltos o discontinuidades. Por el contrario, una ***señal digital*** es aquella en la que la intensidad se mantiene constante durante un determinado intervalo de tiempo, tras el cual la señal cambia a otro valor constante.
 
@@ -24,13 +24,11 @@ En este contexto una ***señal analógica*** es aquella en la que la intensidad 
 >La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
 
 En la práctica, las señales electromagnéticas pueden estar compuestas por múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
-Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha. Esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
-
+Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha, esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 ### Velocidad de Transmisión, Ancho de Banda y Capacidad de Canal
-
 El ***ancho de banda efectivo*** se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
-Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos. Además, el ancho de banda potencial de una señal aumenta con su frecuencia central, lo que permite mayores velocidades de transmisión.
-Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden ser enviados durante un periodo de tiempo, generalmente medido en segundos, a través de un canal determinado. La capacidad de un canal va a depender de la velocidad de transmisión, el ancho de banda del mismo, el ruido que posea el medio y la taza de error.
+Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos.
+Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden ser enviados durante un periodo de tiempo, generalmente medida en bits por segundos, a través de un canal determinado. La capacidad de un canal va a depender de la velocidad de transmisión, el ancho de banda del mismo, el ruido que posea el medio y la taza de error.
 
 >[!tldr] Capacidad Teórica del Canal
 >Nyquist formalizo la manera de calcular la capacidad de canal para medio de transmisión exentos de ruido. En estos casos la velocidad de transmisión de un medio con un ancho de banda $B$ satisface la siguiente ecuación:
@@ -44,61 +42,46 @@ Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden se
 >En este caso $M$ es el número de señales en las que se divide cada cambio de estado. Si bien esta fórmula establece las bases para el cálculo de la capacidad del canal, como no tiene en cuenta el ruido no la taza de error, en la práctica esta ecuación se utiliza para calcular la capacidad teórica del canal.
 
 Existe una relación entre la velocidad de transmisión, el ruido y la tasa de error, puesto que si se aumenta la velocidad de transmisión, la cantidad de bits transmitidos aumentas, de tal manera que dado un patrón de ruido, este afectará a un mayor número de bits. Así pues, dado un nivel de ruido, cuanto mayor es la velocidad de transmisión, mayor es la tasa de errores. Shannon estudió la ***relación señal-ruido (SNR)*** definiéndola matemáticamente a través de la siguiente fórmula:
-
 $$SNR_{dB} = 10 \times log_{10} \ \frac{S}{R}$$
 
 Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una SNR alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
 La relación señal-ruido es importante en la transmisión de datos digitales, porque nos permite determinar la máxima velocidad de transmisión que se puede conseguir. Una conclusión que obtuvo Shannon es que la capacidad máxima del canal, en bits por segundo, verifica la siguiente ecuación:
-
 $$C = B \times log_{2} \ (1 + SNR)$$
 
 Donde $C$ es la capacidad del canal en bits por segundos y $B$ el ancho de banda del canal en hercios. Shannon probó que si la velocidad de información real en el canal es menor que la capacidad libre de errores, entonces es teóricamente posible encontrar una codificación de la señal que consiga una transmisión exenta de errores a través del canal.
-
 ## Transmisión de Datos Analógicos y Digitales
-
 Cuando hablamos de datos nos estamos refiriendo a una entidad capaz de transportar información. En el contexto de los medios físicos, las señales son la representación eléctrica o electromagnética de los datos, mientras que la ***señalización*** es el hecho de propagar dichas señales a través de un medio físico. Cuando hablamos de transmisión nos estamos refiriendo al proceso de comunicación de datos a través de la propagación y procesamiento de señales.
 En un sistema de comunicaciones, los datos se propagan de un punto a otro mediante señales electromagnéticas. Una señal analógica es una onda electromagnética que varía continuamente y que, según sea su espectro, puede propagarse a través de una serie de medios ya sean guiados o no guiados. Mientras que una señal digital es una secuencia de pulsos de tensión que se puede transmitir a través de un medio conductor.
 
 >[!info] Las Señales Digitales
 >La principal ventaja de la señalización digital es que son más económica que la analógica y son menos susceptible a las interferencias de ruido. La principal desventaja es que las señales digitales sufren más con la atenuación que las señales analógicas.
 
-Aunque los datos pueden ser de naturaleza digital o analógica y codificarse de esa manera en consecuencia, no obstante los datos analógicos pueden transmitirse mediante señales digitales y viceversa. Esta conversión se realiza a través de hardware específico, como los *módems*, que transforman señales digitales en analógicas, o los *códecs*, que convierten señales analógicas en digitales.
-Tanto las señales analógicas como las digitales pueden transmitirse sin problemas si se utiliza el medio de transmisión adecuado, ya que este determinará cómo se manejan las señales. Para ambos casos se emplean repetidores o amplificadores que permiten extender la distancia de transmisión. A diferencia de las señales analógicas, las señales digitales son más susceptibles a la atenuación y dependen del contenido de la señal, lo que significa que pueden recorrer distancias más cortas y son más propensas a la degradación.
+Aunque los datos pueden ser de naturaleza digital o analógica y codificarse de esa manera en consecuencia, los datos analógicos pueden transmitirse mediante señales digitales y viceversa. Esta conversión se realiza a través de hardware específico, como los *módems*, que transforman señales digitales en analógicas, o los *códecs*, que convierten señales analógicas en digitales.
+Tanto las señales analógicas como las digitales pueden transmitirse sin problemas si se utiliza el medio de transmisión adecuado, ya que este determinará cómo se manejan las señales. A diferencia de las señales analógicas, las señales digitales son más susceptibles a la atenuación y dependen del contenido de la señal, lo que significa que pueden recorrer distancias más cortas y son más propensas a la degradación.
 No obstante la industria de las telecomunicaciones ha optado por la transmisión digital como el mejor método para la transmisión de datos. Ya sea para cortas o largas distancias, la señalización digital se ha convertido en la norma. Las principales razones para esta elección incluyen:
-
 1. **Tecnología digital**: La mejora en las tecnologías LSI y VLSI ha reducido el coste y tamaño de la circuitería digital, algo que no ha sucedido con los equipos analógicos.
 2. **Integridad de los datos**: La transmisión digital permite mantener la integridad de los datos a mayores distancias, incluso con líneas de menor calidad, al usar repetidores en lugar de amplificadores.
-3. **Utilización de la capacidad**: La transmisión digital facilita la multiplexación, permitiendo un uso más eficiente de las líneas de banda ancha, especialmente en medios como canales satelitales y fibra óptica.
+3. **Utilización de las capacidades del canal**: La transmisión digital facilita la multiplexación, permitiendo un uso más eficiente de las líneas de banda ancha, especialmente en medios como canales satelitales y fibra óptica.
 4. **Seguridad y privacidad**: Las técnicas de cifrado son más fáciles de aplicar a datos digitales.
 5. **Integración**: La transmisión digital permite procesar de manera uniforme señales de voz, vídeo y datos, facilitando la integración y economías de escala.
-
 ### Dificultades en la Transmisión de Datos
-
 En cualquier sistema de comunicaciones se debe aceptar que la señal que se recibe diferirá de la señal transmitida debido a varias adversidades y dificultades sufridas en la transmisión. Las dificultades más significativas son:
-
 - La atenuación y la distorsión de atenuación.
 - La distorsión de retardo.
 - El ruido.
-
 #### Atenuación de la Señal
-
 En cualquier medio de transmisión, la energía de la señal disminuye a medida que aumenta la distancia. En medios guiados, esta reducción de energía suele ser exponencial y se expresa como un valor constante en decibelios por unidad de longitud. Para los medios no guiados, la atenuación depende de la distancia y es influenciada por las condiciones atmosféricas. Se pueden considerar tres aspectos importantes sobre la atenuación:
-
 1. La señal recibida debe tener suficiente energía para que la circuitería electrónica en el receptor pueda detectar la señal adecuadamente. 
 2. Para que una señal pueda ser recibida sin error, la señal debe conservar un nivel suficientemente mayor que el ruido. 
-3. La atenuación es habitualmente una función creciente de la frecuencia.
+3. La atenuación es habitualmente una función creciente de la frecuencia, es decir, a mayor frecuencia más rápido se atenuará la señal.
 
-Los dos primeros problemas se resuelven controlando la energía de la señal, para ello se usan amplificadores o repetidores. El tercer problema es especialmente relevante para el caso de las señales analógicas, en parte porque la atenuación varía en función de la frecuencia, haciendo que la señal recibida esté distorsionada, reduciendo así la inteligibilidad. Para resolver este problema se suelen utilizan técnicas para ecualizar la atenuación en una banda de frecuencias dadas, otra opción alternativa sería utilizar amplificadores que amplifiquen más las frecuencias altas que las bajas.
+Los dos primeros problemas se resuelven controlando la energía de la señal, para ello se usan amplificadores o repetidores. El tercer problema es especialmente relevante para el caso de las señales analógicas, en parte porque la atenuación varía en función de la frecuencia, haciendo que la señal recibida esté distorsionada, reduciendo así la inteligibilidad. Para resolver este problema se suelen utilizan técnicas para ecualizar la atenuación en una banda de frecuencias dadas, una alternativa sería utilizar amplificadores que amplifiquen más las frecuencias altas que las bajas.
 La distorsión de atenuación es una variación en la reducción de la energía de diferentes frecuencias dentro de una señal a medida que se transmite. Esto ocurre porque las distintas frecuencias que componen la señal pueden atenuarse de manera desigual, lo que causa que la forma original de la señal se distorsione durante la transmisión.
-
 #### Distorsión de Retardo
-
-La distorsión de retardo ocurre cuando la velocidad de propagación de una señal en un medio guiado varía según la frecuencia. Esto provoca que las diferentes frecuencias de la señal lleguen al receptor en distintos momentos, causando desplazamientos de fase distorsionando la señal. Este fenómeno es especialmente problemático en la transmisión de datos digitales, ya que puede provocar interferencia entre símbolos y limitar la velocidad máxima de transmisión. Este efecto puede ser compensado empleado distintas técnicas de ecualización.
-
+La distorsión de retardo ocurre cuando la velocidad de propagación de una señal en un medio guiado varía según la frecuencia. Esto provoca que las diferentes frecuencias de la señal lleguen al receptor en distintos momentos, causando desplazamientos de fase, distorsionando la señal.
+Este fenómeno es especialmente problemático en la transmisión de datos digitales, ya que puede provocar interferencia entre símbolos y limitar la velocidad máxima de transmisión. Este efecto puede ser compensado empleado distintas técnicas de ecualización.
 #### Ruido
-
 Cuando se transmite cualquier dato, la señal recibida será la señal original modificada por distorsiones y ruido, que son señales no deseadas introducidas entre el emisor y el receptor. El ruido es un factor crucial que limita el rendimiento de un sistema de comunicación. Existen cuatro tipos principales de ruido:
-
 1. **Ruido térmico**: Producido por la agitación térmica de los electrones, presente en todos los dispositivos electrónicos y medios de transmisión. Es constante en el espectro de frecuencias y no se puede eliminar, imponiendo un límite en el rendimiento del sistema.
 2. **Ruido de intermodulación**: Ocurre cuando señales de distintas frecuencias comparten el mismo medio, generando señales espurias a frecuencias que son suma o diferencia de las originales. Es causado por la no linealidad en los sistemas de transmisión.
 3. **Diafonía**: Es el acoplamiento no deseado entre líneas que transportan señales. Puede ocurrir por acoplamiento eléctrico entre cables cercanos o en antenas de microondas que logran captar señales no deseadas.
